--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,16 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
+  },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "^18.2.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+  "devDependencies": {
+    "parcel": "^2.9.3"
   }
 }
