--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,6 @@
-# Use official Python image (based on Debian Slim)
+# Use official Python image with Debian
 FROM python:3.10-slim
 
-# Install system-level dependencies required for face_recognition and dlib
 RUN apt-get update && apt-get install -y \
     build-essential \
     cmake \
@@ -12,20 +11,13 @@ RUN apt-get update && apt-get install -y \
     libboost-python-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy Python dependencies file first (for caching layer)
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the codebase into the container
 COPY . .
 
-# Expose FastAPI default port
 EXPOSE 8000
 
-# Run the FastAPI application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
